--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -8,7 +8,11 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyyMMdd HH:mm:ss.SSS} [[%5p]
 
 
 log4j.logger.org.hibernate=ERROR
+log4j.additivity.org.hibernate=false
 
 # SQL statements and parameters
-log4j.logger.org.hibernate.SQL=debug,CONSOLE
+log4j.logger.org.hibernate.SQL=ERROR,CONSOLE
+log4j.additivity.org.hibernate.SQL=false
+
 log4j.logger.org.hibernate.type.descriptor.sql=trace,CONSOLE
+log4j.additivity.org.hibernate.type.descriptor.sql=false
